--- a/fpga/de1/minimig_de1.qsf
+++ b/fpga/de1/minimig_de1.qsf
@@ -604,6 +604,9 @@ set_instance_assignment -name IO_STANDARD LVTTL -to Joyb[0]
 set_instance_assignment -name IO_STANDARD LVTTL -to Joya[6]
 set_instance_assignment -name IO_STANDARD LVTTL -to Joya[5]
 
+
+
+
 set_global_assignment -name VERILOG_FILE ../../rtl/soc/minimig_de1_top.v
 set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/qmem_sram.v
 set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/qmem_decoder.v
@@ -611,6 +614,7 @@ set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/qmem_bus.v
 set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/qmem_arbiter.v
 set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/ctrl_top.v
 set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/ctrl_rst.v
+set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/qmem_bridge.v
 set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/ctrl_regs.v
 set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/ctrl_flash.v
 set_global_assignment -name VERILOG_FILE ../../rtl/ctrl/ctrl_clk.v
@@ -707,6 +711,4 @@ set_global_assignment -name VHDL_FILE ../../rtl/tg68k/TG68KdotC_Kernel.vhd
 set_global_assignment -name VHDL_FILE ../../rtl/tg68k/TG68K_Pack.vhd
 set_global_assignment -name VHDL_FILE ../../rtl/tg68k/TG68K_ALU.vhd
 set_global_assignment -name VHDL_FILE ../../rtl/tg68k/TG68K.vhd
-
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-
