--- a/fpga/mist/minimig_mist.qsf
+++ b/fpga/mist/minimig_mist.qsf
@@ -312,6 +312,10 @@ set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to VGA_B[1]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to VGA_B[0]
 
 
+
+
+
+
 set_global_assignment -name VERILOG_FILE ../../rtl/soc/minimig_mist_top.v
 set_global_assignment -name VERILOG_FILE ../../rtl/minimig/minimig.v
 set_global_assignment -name VERILOG_FILE ../../rtl/minimig/minimig_syscontrol.v
@@ -365,6 +369,7 @@ set_global_assignment -name VERILOG_FILE ../../rtl/minimig/denise_spritepriority
 set_global_assignment -name VERILOG_FILE ../../rtl/minimig/denise_playfields.v
 set_global_assignment -name VERILOG_FILE ../../rtl/minimig/denise_hamgenerator.v
 set_global_assignment -name VERILOG_FILE ../../rtl/minimig/denise_colortable.v
+set_global_assignment -name VERILOG_FILE ../../rtl/minimig/denise_colortable_ram_mf.v
 set_global_assignment -name VERILOG_FILE ../../rtl/minimig/denise_collision.v
 set_global_assignment -name VERILOG_FILE ../../rtl/minimig/denise_bitplanes.v
 set_global_assignment -name VERILOG_FILE ../../rtl/minimig/denise_bitplane_shifter.v
@@ -382,8 +387,5 @@ set_global_assignment -name VHDL_FILE ../../rtl/tg68k/TG68KdotC_Kernel.vhd
 set_global_assignment -name VHDL_FILE ../../rtl/tg68k/TG68K_Pack.vhd
 set_global_assignment -name VHDL_FILE ../../rtl/tg68k/TG68K_ALU.vhd
 set_global_assignment -name VHDL_FILE ../../rtl/tg68k/TG68K.vhd
-
 set_global_assignment -name SDC_FILE minimig_mist.sdc
-
-
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
